# gdal-hss-plugin

./: README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  CMakeListst.txt  entrypoint.cpp  extradrivers.h  gdal_hss_plugin.h
src/hss/: ogr_hss.h  ogrhssdatasource.cpp  ogrhssdriver.cpp  ogrhsslayer.cpp
